adding express and grunt express server

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "Starter files and configurations for static site",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.13.4"
+  },
   "author": "harish",
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -13,6 +15,7 @@
     "grunt-contrib-htmlmin": "^0.4.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-express-server": "^0.5.2",
     "grunt-processhtml": "^0.3.8",
     "grunt-sass": "^1.0.0",
     "load-grunt-tasks": "^3.2.0",
